--- a/tsonnet.opam
+++ b/tsonnet.opam
@@ -13,6 +13,7 @@ depends: [
   "ocaml" {>= "5.1.1"}
   "dune" {>= "3.16" & >= "3.16.0"}
   "menhir" {= "20240715"}
+  "alcotest" {with-test & >= "1.8.0"}
   "odoc" {with-doc}
 ]
 build: [
