--- a/tsonnet.opam
+++ b/tsonnet.opam
@@ -14,6 +14,7 @@ depends: [
   "dune" {>= "3.16" & >= "3.16.0"}
   "menhir" {= "20240715"}
   "alcotest" {with-test & >= "1.8.0"}
+  "bisect_ppx" {with-test & >= "2.8.3"}
   "odoc" {with-doc}
 ]
 build: [
