--- a/tsonnet.opam
+++ b/tsonnet.opam
@@ -15,6 +15,7 @@ depends: [
   "menhir" {= "20240715"}
   "alcotest" {with-test & >= "1.8.0"}
   "bisect_ppx" {with-test & >= "2.8.3"}
+  "yojson" {>= "2.2.2"}
   "odoc" {with-doc}
 ]
 build: [
